trying to make sure button text is black on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -486,6 +486,7 @@ input{
     width: 75%;
     margin-bottom: 2rem;
     font-size: 1.2rem;
+    color: black;
     
   }
 
